code/tui/src/app/snapshots/app__session_manager_tests__session_manager_idle_expanded.snap
---
source: code/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
  .                                                                            [— / —] [Dashboard]

> Idle (1)
  ○ Snapshot session
  Archived (0)






















  ────────────────────────────────────────────────────────────────────────────────────────────────
  > Build anything
  ─────────────────────────────────────────────────────────────────────────────── Automatic model

  Enter to collapse · Esc to return
