code/tui/src/app/snapshots/app__session_manager_tests__session_manager_preview_conversation.snap
---
source: code/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
  .                                                                            [— / —] [Dashboard]


● Conversation message 22: content stays readable in preview.

● Conversation message 23: content stays readable in preview.

● Conversation message 24: content stays readable in preview.

● Conversation message 25: content stays readable in preview.

● Conversation message 26: content stays readable in preview.

● Conversation message 27: content stays readable in preview.

● Conversation message 28: content stays readable in preview.

● Conversation message 29: content stays readable in preview.

● Conversation message 30: content stays readable in preview.

● Conversation message 31: content stays readable in preview.

● Conversation message 32: content stays readable in preview.

● Conversation message 33: content stays readable in preview.

● Conversation message 34: content stays readable in preview.


  Preview · Snapshot session · read only
  Esc to close
