code/tui/src/app/snapshots/app__session_manager_tests__session_manager_preview_loading.snap
---
source: code/tui/src/app/session_manager_tests.rs
expression: render(&app)
---
  .                                                                            [— / —] [Dashboard]




























Loading conversation…
  Preview · Snapshot session · read only
  Esc to close
